FIX: avatar contrast

--- a/apps/web/src/components/Avatar/avatar.scss
+++ b/apps/web/src/components/Avatar/avatar.scss
@@ -11,6 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 1px solid $color-primary;
 
   img {
     object-fit: cover;
